service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: php-hello
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: web
