route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
  labels:
    app: web
  name: php-hello
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: php-hello
    weight: 100
